--- a/lab05/package.json
+++ b/lab05/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "ioredis": "^4.19.2"
+    "ioredis": "^4.19.2",
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.5"
   }
 }
